# oxsat

./: .gitignore  .gitmodules  AGENTS.md  README.md  cdcl.rs  debug_summary.txt  ds.opam.locked  dune  dune-project  feel.opam  feel.opam.locked  opam-switch.export  perf.data  theories.opam
bench/: .#proposed_changes.txt  benchmark.ml  benchmark.mli  dimacs_bench.ml  dimacs_debug.ml  dune  feel_bench.ml  mac_smt_results.txt  map_bench.ml  proposed_changes.txt  rb_bench.ml  results.txt  sat.js  sat_bench.ml  sat_js_dimacs_bench.ml  sat_js_dimacs_runner.js  simple_sat_dimacs_bench.ml  simple_sat_dimacs_debug.ml  smt_bench.ml  smt_bench.mli  timing.txt  uf_bench.ml  windows_results.txt
ds/: bitset.ml  bitset.mli  bitset2.ml  dune  ext.ml  ext.mli  ext_stubs.c  hash_table.ml  hash_table.mli  hash_table_intf.ml  heap.ml  heap.mli  interned.ml  interned.mli  interned_intf.ml  local_ref.ml  local_ref.mli  option_u.ml  option_u.mli  option_u_intf.ml  optional_pair.ml  optional_pair.mli  optional_pair_intf.ml  pool.ml  pool.mli  pool_intf.ml  poolable.ml  ptr.ml  ptr.mli  rb.ml  rb.mli  rb_intf.ml  ufds.ml  ufds.mli  ufdsu.ml  ufdsu.mli  vec.ml  vec.mli  vec_intf.ml  vecable.ml
examples/: dimacs.ml  dimacs.mli  dune
lib/: .#solver.ml  .#solver.mli  :w  adjusting_score.ml  assignment.ml  bitset_clause.ml  bitset_clause.mli  clause.ml  clause.mli  clause_intf.ml  config.ml  config.mli  dune  import.ml  literal.ml  literal.mli  literal_set.ml  literal_set.mli  local_ref.ml  local_ref.mli  logic.ml  luby.ml  reason.ml  reason.mli  sat_generators.ml  sat_result.ml  simple_sat.ml  simple_sat.mli  solver.ml  solver.mli  stats.ml  tf_pair.ml  theory.ml  theory.mli  theory_intf.ml  trace.ml  trail_entry.ml  var.ml  vsids.ml  vsids.mli  (+1 more)
lib2/: .#solver.ml  clause.ml  dune  import.ml  reason.mli  (+13 more)
(+139 files in other folders)
